Changing default params. Adding catkin ignore since it is a system wide installation

--- a/src/novatel_oem7_driver/config/std_init_commands.yaml
+++ b/src/novatel_oem7_driver/config/std_init_commands.yaml
@@ -41,18 +41,19 @@ receiver_init_commands:
 
 - "UNLOGALL THISPORT"
 #- "FRESET"
-#- "!PAUSE 10"
+- "!PAUSE 10"
 
 # INS Setup Commands - refer to https://docs.novatel.com/OEM7/Content/SPAN_Operation/SPAN_Operation.htm?tocpath=Operation%7CSPAN%20Operation%7C_____0
 # for INS setup help.
-#- "SETINSPROFILE LAND"
+- "SETINSPROFILE LAND"
 # IMU offsets (SETINSTRANSLATION command). If using SPAN then these must be entered precisely.
 #    * ANT1 is the IMU to Primary GNSS antenna offset and MUST be entered precisely for proper INS
 #       functioning. 
 #    * ANT2 must be entered if using a dual antenna setup in order to take advantage of the second antenna in INS
 #    * USER offsets the INS position from its default center of IMU to a specified location. To make INS positions match
 #       the GNSS (BESTPOS, GPSFix etc.) outputting at antenna center then set this equal to ANT1.
-#- "SETINSTRANSLATION ANT 1 <x> <y> <z> <std. x> <std. y> <std. z>
+- "SETINSTRANSLATION ANT1 -0.488 0.049 0.006 0.005 0.005 0.01"
+- "SETINSTRANSLATION ANT2  0.488 0.049 0.006 0.005 0.005 0.01"
 #- "SETINSTRANSLATION USER <x> <y> <z> 
 # INS rotation offsets (SETINSROTATION command) 
 #    * RBV (rotation from IMU body to vehcile) should be entered if the IMU is not aligned y-forward with the vehicle 
@@ -69,8 +70,6 @@ receiver_init_commands:
 # Status & Config
 - "LOG INSCONFIGB ONCE"  # Log once to obtain initial configuration. Do not remove, needed for IMU messages.
 - "LOG INSCONFIGB ONTIME 300" # Periodic update.
-- "LOG TERRASTARINFOB ONTIME 300" # Periodic update.
-- "LOG TERRASTARSTATUSB ONTIME 300" # Periodic update.
 - "LOG RXSTATUSB ONCHANGED"
 
 # GNSS and INS Solutions
@@ -79,29 +78,26 @@ receiver_init_commands:
 - "LOG BESTPOSB ONTIME 0.1" 
 - "LOG BESTVELB ONTIME 0.1" 
 - "LOG BESTUTMB ONTIME 1"
-- "LOG PPPPOSB ONTIME 1"
 - "LOG HEADING2B ONNEW"
 - "LOG PSRDOP2B ONCHANGED"
 - "LOG INSPVASB ONTIME 0.02"
 - "LOG INSPVAXB ONTIME 1"
-- "LOG CORRIMUSB ONTIME 0.01"
+- "LOG CORRIMUSB ONTIME 0.02"
+- "LOG RAWIMUSB ONTIME 0.02"
 - "LOG INSSTDEVB ONTIME 1"
-- "LOG BESTGNSSPOSB ONTIME 0.1"
-- "LOG RAWIMUSXB ONNEW"
-
 #----------------------------------------------------------------------------------------------------------
 
-- "LOG TIMEB ONTIME 1" # Can be used as a 'heartbeat' message.
+# - "LOG TIMEB ONTIME 1" # Can be used as a 'heartbeat' message.
 
 # Post-Processing Messages; not directly used to generate ROS messages.
-- "LOG INSUPDATESTATUSB ONNEW"
-- "LOG RAWEPHEMB ONNEW"
-- "LOG GLOEPHEMERISB ONNEW"
-- "LOG BDSEPHEMERISB ONNEW"
-- "LOG GALFNAVEPHEMERISB ONNEW"
-- "LOG GALINAVEPHEMERISB ONNEW"
-- "LOG RANGEB ONTIME 1"
-
+# - "LOG RAWIMUSXB ONNEW"
+# - "LOG INSUPDATESTATUSB ONNEW"
+# - "LOG RAWEPHEMB ONNEW"
+# - "LOG GLOEPHEMERISB ONNEW"
+# - "LOG BDSEPHEMERISB ONNEW"
+# - "LOG GALFNAVEPHEMERISB ONNEW"
+# - "LOG GALINAVEPHEMERISB ONNEW"
+# - "LOG RANGEB ONTIME 1"
 
 
 
